--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="AUWAL.png" alt="Muhammad profile picture"></td>
+        <td><img src="Auwal.png" alt="Muhammad profile picture"></td>
         <td><h1>Muhammad Auwal Umar</h1>
         <p><em>Creator And Manager Of <strong>This Web Site</strong></em></p>
         <p>I am an ios and web developer. I 💗 web development</p>
